<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_stack"
        android:icon="@drawable/bottom_nav_stack_icon"
        android:title="@string/title_stack" />
    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/bottom_nav_store_icon"
        android:title="@string/title_store" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/bottom_nav_dashboard_icon"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_navigation"
        android:icon="@drawable/bottom_nav_compass"
        android:title="@string/title_navigation" />
    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/bottom_nav_favourite_icon"
        android:title="@string/title_favourites" />

</menu>