<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="4"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/head_til_1"
            android:textColor="@color/colorFront"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/head_til_2"
            android:textColor="@color/colorFront"
            android:textSize="@dimen/_13sdp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/head_til_3"
            android:textColor="@color/colorFront"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/head_til_4"
            android:textColor="@color/colorFront"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp">

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorEnabled="true"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="3" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="83dp"
                    android:gravity="center"
                    android:text="@string/text_best_practice"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RelativeOverlap" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:text="@string/shop"
                    app:backgroundTint="@color/color_blue"
                    app:cornerRadius="@dimen/_5sdp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <include layout="@layout/row_main_category"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:text="@string/best_title"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorGrayDark"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_MainCategory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_210sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:text="@string/top_title"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorGrayDark"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@color/white"
                android:orientation="horizontal"
                />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:singleLine="true"
                    android:text="@string/shop_by_category"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:text="@string/view_all"
                    android:textColor="@color/black"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:weightSum="2"
                android:baselineAligned="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    >
                    <ImageView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_50sdp"
                        android:src="@drawable/bottom_nav_stack_icon"
                        android:scaleType="fitCenter"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_subcategory_1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintWidth_percent="0.5"
                        android:contentDescription="@string/todo" />
                    <TextView
                        android:id="@+id/tv_subcategory_1"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:text="@string/sub_category"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_subcategory_1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintWidth_percent="0.5"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    >
                    <ImageView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_50sdp"
                        android:src="@drawable/bottom_nav_stack_icon"
                        android:scaleType="fitCenter"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_subcategory_2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintWidth_percent="0.5"
                        android:contentDescription="@string/todo" />
                    <TextView
                        android:id="@+id/tv_subcategory_2"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:text="@string/sub_category"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_subcategory_2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintWidth_percent="0.5"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_subCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_5sdp"
                android:gravity="bottom"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:weightSum="4"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/terms_of_use"
                    android:textColor="@color/colorFront"
                    android:textSize="@dimen/_9sdp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/contact"
                    android:textColor="@color/colorFront"
                    android:textSize="@dimen/_9sdp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/career"
                    android:textColor="@color/colorFront"
                    android:textSize="@dimen/_9sdp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/area_change"
                    android:textColor="@color/colorFront"
                    android:textSize="@dimen/_9sdp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="bottom"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:background="@color/white"
                >

                <ImageView
                    android:id="@+id/tv_slider_price_new"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/tv_slider_price_old"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_toStartOf="@id/tv_percent_price_off"
                    android:gravity="center_vertical"
                    android:text="@string/project_by"
                    android:textColor="@color/colorFront"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/tv_percent_price_off"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/ezeness_technology"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>